Updates for more stable linked resources

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                         <div class = 'small-50 padding-after'><a>New ways to explore</a> (spatial) data and information, and for users to contribute and connect</div>
                         <div class = 'img-container bg-light height-20vh'>
                             <div class = 'inline-image-container'>
-                                <img src = "https://s3.amazonaws.com/dl.getforma.com/.attachments/417239b494bacde2c4194095559b080a/0d4e6564/mockup-a.png?AWSAccessKeyId=AKIAR7KB7OYSMPA2CKCB&Expires=1643525637&Signature=BY45WrrTHFx7jn1NkzEQkQ%2FQfDs%3D&response-content-disposition=attachment%3Bfilename%2A%3DUTF-8%27%27mockup-a.png&response-content-type=image%2Fpng">
+                                <img src = "./img/mockup-a.png">
                             </div>
                             <div class = 'inline-image-container'>
-                                <img src = "https://s3.amazonaws.com/dl.getforma.com/.attachments/b904c3f627fdd7916885201b53ce5813/d3f13de7/mockup-b.png?AWSAccessKeyId=AKIAR7KB7OYSMPA2CKCB&Expires=1643518819&Signature=ZM16upN3CpCv7ESuv264vL3oaP8%3D&response-content-disposition=attachment%3Bfilename%2A%3DUTF-8%27%27mockup-b.png&response-content-type=image%2Fpng">
+                                <img src = "./img/mockup-b.png">
                             </div>
                         </div>
                         <div class = "align-right small-30 padding-before">Concept interfaces taken from <em>Collaborative Tool Scoping Report (2021)</em></div>
@@ -130,7 +130,7 @@
                             <iframe    
                                 width = "57.5%"
                                 height = "100%"
-                                src = "http://littlesketch.es/experiments/mw-network.html?mode=dark" 
+                                src = "./vis/mw-network.html?mode=dark" 
                                 allowfullscreen>
                             </iframe>
                         </div>
