--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h3>Tool basics </h3> 
                         <ol class = 'small-70'>
                             <li><a>Melbourne Water-led</a> initiative to support the Healthy Waterways Strategy</li>
-                            <li><a>Web-based</a> digital tool with data and information about <a>what's happening in the catchment</a></li>
+                            <li><a>Web-based</a> digital tool featuring data and information about <a>what's happening in the catchment</a></li>
                             <li>Designed to be used by <a>all catchment stakeholders</a></li>
                             <li>Has the (ambitious) goal of <a>'collaboration'</a></li>
                         </ol>
@@ -186,8 +186,9 @@
 					<section>
                         <div class = 'small-70'>...to <a>'build' something</a> we can get real feedback on and <a>make better</a></div>
                         <div class = 'small-50 padding-after'>(akin to a 'lean startup' approach)</div>
-                        <h3>Build &rarr; Test &rarr; Learn</h3>
-                        <h3>Repeat</h3>
+                        <h3 class ="no-space-after">Build &rarr; Test &rarr; Learn</h3>
+                        <div class ="small-50 no-space-before">(measure)</div>
+                        <h3 class = 'padding-before'>Repeat</h3>
                         <aside class = 'notes'>   
                         </aside>
                     </section>
@@ -232,21 +233,36 @@
 				<section>
                     <!-- Section title -->
 					<section>
-                        <h4 class = 'no-space-after'>The process of</h4>
+                        <h4 class = 'no-space-after'>The role and process of</h4>
                         <h1>Design</h1>
-                        <div class = "small-50">Understanding users + developing technical architecture</div>
+                        <div class = "small-50">Tasks to understand users & develop technical architecture</div>
                         <aside class = 'notes'>   
                         </aside>
                     </section>
 
+                    <!-- Design statement-->
+					<section>
+                        <h3>Finding the purpose for design</h3> 
+                        <div class = 'small-50 padding-after'>A collaborative canvas being used to refining and revisiting the design of the tool, anchored to business needs and the HWS</div>
+                        <div class = "iframe-container figma-embed height-40vh">
+                            <iframe 
+                                width ="100%"
+                                height = "100%"
+                                src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FcFgGANV4KRDchsP8qzgszo%2FMW---Design-statement-%252B-Purpose" 
+                                allowfullscreen>
+                            </iframe>
+                        </div>
+                        <aside class = 'notes'>   
+                        </aside>
+                    </section>
 
                     <!-- Data and users-->
 					<section>
-                        <div class = 'small-50'>Starting with two intertwined areas of</div>
+                        <div class = 'small-50'>Begin with two intertwined areas of</div>
                         <h2>Design research</h2>
                         <ul class = 'small-70'>
-                            <li><a>Understanding users:</a> user research and testing (traditional 'design' or 'co-design'). We need to talk to potential users to understand their needs</li>
-                            <li><a>Technical architecture:</a>  data and information review and 'engineering'. Reviewing existing data for quality, completeness and accessibility.</li>
+                            <li><a>Understanding users:</a> user research and testing (traditional 'design' or 'co-design'). We need to talk to potential users to understand their needs.</li>
+                            <li><a>Technical architecture:</a> data and information review and 'engineering'. Reviewing existing data for quality, completeness and accessibility.</li>
                         </ul>
                         <aside class = 'notes'>   
                         </aside>
@@ -274,7 +290,7 @@
                         <h2>Data review</h2>
                         <ul class = 'small-70'>
                             <li><a>Critical to get actual data</a>: quality checking + need to know 'what it can do' and if there are gaps</li>
-                            <li><a>Test Data pipelines</a>: need to understand how that data is created, and how it can be accessed. And if the Tool's data can be usefully fed back<sup>*</sup>.</li>
+                            <li><a>Test data pipelines</a>: need to understand how that data is created, and how it can be accessed. And if the Tool's data can be usefully fed back<sup>*</sup>.</li>
                             <li><a>Understand data owners</a>: need to establish relationships with data owners</li>
                         </ul>
 
@@ -321,21 +337,6 @@
                         </aside>
                     </section>
 
-                    <!-- Design statement-->
-					<section>
-                        <h3>Purpose for design</h3> 
-                        <div class = 'small-50 padding-after'>A collaborative canvas being used to refining and revisiting the design of the tool (but also anchored to business needs and the HWS)</div>
-                        <div class = "iframe-container figma-embed height-40vh">
-                            <iframe 
-                                width ="100%"
-                                height = "100%"
-                                src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FcFgGANV4KRDchsP8qzgszo%2FMW---Design-statement-%252B-Purpose" 
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                        <aside class = 'notes'>   
-                        </aside>
-                    </section>
 
                     <!-- Project airtable -->
                     <section>
